# circt

cmake/modules/: AddCIRCT.cmake
docs/Dialects/SystemC/: RationaleSystemC.md
include/circt/: InitAllDialects.h  InitAllExternModels.h  InitAllPasses.h
include/circt/Conversion/: CombToSMT.h  HandshakeToSMT.h  LowerInterop.h  MooreMIRToCore.h  Passes.h  Passes.td  SMTToZ3LLVM.h  VerifToSMT.h
include/circt/Dialect/: CMakeLists.txt
include/circt/Simulator/: Engine.h  State.h  signals-runtime-wrappers.h
include/circt/Transforms/: Passes.h
integration_test/Dialect/SMT/: basic.mlir
integration_test/arcilator/JIT/: counter.mlir
integration_test/circt-bmc/: seq.mlir
integration_test/circt-lec/: builtin.mlir  comb.mlir  commandline.mlir  handshake.mlir  hw.mlir
lib/: CMakeLists.txt
lib/CAPI/Dialect/: LLHD.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Dialect/: CMakeLists.txt
lib/Simulator/: Engine.cpp  State.cpp  signals-runtime-wrappers.cpp
lib/Transforms/: FunctionEliminationPass.cpp  ProcessLoweringPass.cpp
test/: CMakeLists.txt  lit.cfg.py
test/Simulator/: sim_arbitrary_signal_size.mlir  sim_bit_precision_drives.mlir
tools/: CMakeLists.txt
tools/arcilator/: arcilator.cpp
tools/circt-bmc/: CMakeLists.txt  circt-bmc.cpp
tools/circt-lec/: CMakeLists.txt  circt-lec.cpp
tools/circt-lsp-server/: CMakeLists.txt
tools/circt-opt/: CMakeLists.txt  circt-opt.cpp
tools/circt-reduce/: CMakeLists.txt  circt-reduce.cpp
tools/llhd-sim/: CMakeLists.txt  llhd-sim.cpp
tools/llhd-translate/: llhd-translate.cpp
tools/llhdc/: llhdc.cpp
(+259 files in other folders)
